# mini-auth

./: .coverage  .gitignore  .vercelignore  README.md  alembic.ini  main.py  mini_auth.db  pyproject.toml  requirements.txt  setup.cfg  setup.py  vercel.json
alembic/: env.py
alembic/versions/: fd24e2831acd_add_project_id_to_user_and_composite_.py
api/: __init__.py  app.py  index.py
docs/: changelog.md  documentation.md  project.md
src/: __init__.py  database.py  main.py  sql_app.db  test.db
src/api/: auth.py
src/api/v1/: __init__.py  admins.py  auth.py  client_auth.py  projects.py  users.py
src/api/v1/dashboard/: __init__.py  api_keys.py  projects.py  users.py
src/core/: __init__.py  auth.py  auth_dependencies.py  config.py  database.py  security.py
src/core/crud/: api_key.py  auth.py  project.py  user.py
src/core/crypt/: __init__.py  context.py  sha.py
src/core/dependencies/: auth.py  project_auth.py
src/core/middleware/: auth.py
src/core/security/: jwt.py  password.py  tokens.py
src/mini_auth/: __init__.py  auth.py  db.py  user.py
src/mini_auth.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/mini_auth/crypto/: crypto.py  pbkdf2_hmac.py  sha256.py
src/models/: __init__.py  base.py  project.py  user.py
src/schemas/: __init__.py  admin.py  api_key.py  auth.py  project.py  user.py
tests/: test_auth.py  test_crypto.py  test_db.py
vercel_handler/: index.py
