[metadata]
name = mini-auth
description = A minimalist authentication library for Python applications
author = David
license = MIT
license_file = LICENSE

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test
python_functions = test_*
addopts = --verbose --cov=mini_auth

[coverage:run]
source = mini_auth

[flake8]
max-line-length = 88
extend-ignore = E203
exclude = .git,__pycache__,build,dist

[isort]
profile = black
multi_line_output = 3 